# drf_pet_project

./: .gitignore  README.md
container/: docker-compose.yml
container/main/: Dockerfile
source/main/: pyproject.toml
source/main/config/: settings.py
