[tool.poetry]
name = "drf-pet-project"
version = "0.1.0"
description = "This is a pet project on django-rest-framework"
authors = ["Fazle Rabbi Ador <ador.fazlerabbi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
